--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret Santa Cloud</title>
+    <title>Secret Santa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- React and Babel for running React in the browser (GitHub Pages ready) -->
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
